[package]
name = "diy-db-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
zerocopy = { version = "0.7.32", features = ["derive"] }
memmap2 = "0.9.3"
anyhow = "1.0.79"
byteorder = "1.5.0"